Subfilter activate on checkbox change/ label ids now with prefix

--- a/index.html
+++ b/index.html
@@ -111,40 +111,44 @@
                   </div>
                   <div class="subfilter__row-container">
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="1" />
-                      <label for="1">Black</label>
+                      <input class="color-checkbox" type="checkbox" id="c1" />
+                      <label for="c1">Black</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="4" />
-                      <label for="4">Blue</label>
+                      <input class="color-checkbox" type="checkbox" id="c3" />
+                      <label for="c3">White</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="8" />
-                      <label for="8">Red</label>
+                      <input class="color-checkbox" type="checkbox" id="c4" />
+                      <label for="c4">Blue</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="11" />
-                      <label for="11">Gold</label>
+                      <input class="color-checkbox" type="checkbox" id="c8" />
+                      <label for="c8">Red</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="12" />
-                      <label for="12">Pink</label>
+                      <input class="color-checkbox" type="checkbox" id="c11" />
+                      <label for="c11">Gold</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="13" />
-                      <label for="13">Green</label>
+                      <input class="color-checkbox" type="checkbox" id="c9" />
+                      <label for="c9">Pink</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="14" />
-                      <label for="14">Yellow</label>
+                      <input class="color-checkbox" type="checkbox" id="c5" />
+                      <label for="c5">Green</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="15" />
-                      <label for="15">Orange</label>
+                      <input class="color-checkbox" type="checkbox" id="c6" />
+                      <label for="c6">Yellow</label>
                     </div>
                     <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="16" />
-                      <label for="16">Purple</label>
+                      <input class="color-checkbox" type="checkbox" id="c7" />
+                      <label for="c7">Orange</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="color-checkbox" type="checkbox" id="c10" />
+                      <label for="c10">Purple</label>
                     </div>
                   </div>
                 </div>
@@ -155,21 +159,21 @@
                 </button>
                 <div class="subfilter__selection hidden">
                   <div class="subfilter__row">
-                    <label for="Nuphy">Nuphy</label>
-                    <input class="brand-checkbox" type="checkbox" id="2" />
+                    <input class="brand-checkbox" type="checkbox" id="b2" />
+                    <label for="b2">Nuphy</label>
                   </div>
                   <div class="subfilter__row">
-                    <label for="Royal Kludge">Royal Kludge</label>
-                    <input class="brand-checkbox" type="checkbox" id="1" />
+                    <input class="brand-checkbox" type="checkbox" id="b1" />
+                    <label for="b1">Royal Kludge</label>
                   </div>
                 </div>
               </div>
-              <button class="general-subfilter-btn subfilter-btn-go">
+              <!-- <button class="general-subfilter-btn subfilter-btn-go">
                 Filter
-              </button>
+              </button> -->
             </div>
             <div class="subfilter-active">
-              <button class="hidden general-subfilter-btn subfilter-btn-clear">
+              <button class="general-subfilter-btn subfilter-btn-clear">
                 Clear All
               </button>
               <button class="testBTN">test</button>
@@ -179,8 +183,8 @@
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
-              data-color="1,4"
-              data-brand="2"
+              data-color="c1,c4"
+              data-brand="b2"
               data-price="299"
             >
               <div class="card-bg"></div>
@@ -235,8 +239,8 @@
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
-              data-brand="2"
-              data-color="4"
+              data-brand="b2"
+              data-color="c4"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
@@ -256,7 +260,7 @@
                 <div class="labels">
                   <button class="label type">Keyboard</button>
                   <button class="label brand">Royal Kludge</button>
-                  <button class="label color">white</button>
+                  <button class="label color">Blue</button>
                 </div>
                 <div class="price_cart">
                   <p class="price">$399</p>
@@ -291,8 +295,8 @@
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
-              data-brand="1"
-              data-color="5"
+              data-brand="b1"
+              data-color="c5"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
@@ -346,8 +350,8 @@
 
             <div
               class="product-card"
-              data-color="11"
-              data-brand="2"
+              data-color="c11"
+              data-brand="b2"
               data-category="Keycaps"
             >
               <div class="card-bg"></div>
@@ -402,8 +406,8 @@
 
             <div
               class="product-card"
-              data-color="3,4,1"
-              data-brand="1"
+              data-color="c3,c4,c1"
+              data-brand="b1"
               data-category="Switches"
             >
               <div class="card-bg"></div>
@@ -458,8 +462,8 @@
 
             <div
               class="product-card"
-              data-color="9,4"
-              data-brand="2"
+              data-color="c9,c4"
+              data-brand="b2"
               data-category="Keycaps"
             >
               <div class="card-bg"></div>
@@ -514,8 +518,8 @@
 
             <div
               class="product-card"
-              data-color="11,12"
-              data-brand="2"
+              data-color="c11,c12"
+              data-brand="b2"
               data-category="Keyboard"
             >
               <div class="card-bg"></div>
@@ -570,8 +574,8 @@
 
             <div
               class="product-card"
-              data-color="8"
-              data-brand="2"
+              data-color="c8"
+              data-brand="b2"
               data-category="Switches"
             >
               <div class="card-bg"></div>
@@ -626,9 +630,9 @@
 
             <div
               class="product-card"
-              data-color="8,7"
+              data-color="c8,c7"
               data-category="Switches"
-              data-brand="1"
+              data-brand="b1"
             >
               <div class="card-bg"></div>
               <div class="discount">%</div>
