Added clear to brand subfilter

--- a/index.html
+++ b/index.html
@@ -153,18 +153,23 @@
                   </div>
                 </div>
               </div>
-              <div class="subfilter__section brands-section">
+              <div class="subfilter__section subfilter__brands-section">
                 <button class="general-subfilter-btn subfilter-btn">
                   Brand
                 </button>
                 <div class="subfilter__selection hidden">
-                  <div class="subfilter__row">
-                    <input class="brand-checkbox" type="checkbox" id="b2" />
-                    <label for="b2">Nuphy</label>
+                  <div class="subfilter__clear">
+                    <span>Clear</span>
                   </div>
-                  <div class="subfilter__row">
-                    <input class="brand-checkbox" type="checkbox" id="b1" />
-                    <label for="b1">Royal Kludge</label>
+                  <div class="subfilter__row-container">
+                    <div class="subfilter__row">
+                      <input class="brand-checkbox" type="checkbox" id="b2" />
+                      <label for="b2">Nuphy</label>
+                    </div>
+                    <div class="subfilter__row">
+                      <input class="brand-checkbox" type="checkbox" id="b1" />
+                      <label for="b1">Royal Kludge</label>
+                    </div>
                   </div>
                 </div>
               </div>
