Added subfilter clear functionality

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </button>
                 <div class="subfilter__selection">
                   <div class="subfilter__clear">
-                    <span>Clear</span>
+                    <span class="subfilter__clear-color">Clear</span>
                   </div>
                   <div class="subfilter__row-container">
                     <div class="subfilter__row">
@@ -159,7 +159,7 @@
                 </button>
                 <div class="subfilter__selection hidden">
                   <div class="subfilter__clear">
-                    <span>Clear</span>
+                    <span class="subfilter__clear-brand">Clear</span>
                   </div>
                   <div class="subfilter__row-container">
                     <div class="subfilter__row">
