--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 >
                   Colors
                 </button>
-                <div class="subfilter__selection">
+                <div class="hidden subfilter__selection">
                   <div class="subfilter__clear">
                     <span class="subfilter__clear-color">Clear</span>
                   </div>
@@ -178,10 +178,21 @@
               </button> -->
             </div>
             <div class="subfilter-active">
-              <button class="general-subfilter-btn subfilter-btn-clear">
+              <button class="active-filter-btn subfilter-btn-clear">
                 Clear All
               </button>
-              <button class="testBTN">test</button>
+              <div class="active-filter-btn">
+                <span>black</span>
+                <span>x</span>
+              </div>
+              <div class="active-filter-btn">
+                <span>Gold</span>
+                <span>x</span>
+              </div>
+              <div class="active-filter-btn">
+                <span>Nuphy</span>
+                <span>x</span>
+              </div>
             </div>
           </div>
           <div class="grid-container">
