Clear All button only appears when filters are active

--- a/index.html
+++ b/index.html
@@ -173,12 +173,9 @@
                   </div>
                 </div>
               </div>
-              <!-- <button class="general-subfilter-btn subfilter-btn-go">
-                Filter
-              </button> -->
             </div>
             <div class="subfilter-active">
-              <button class="active-filter-btn subfilter-btn-clear">
+              <button class="hidden active-filter-btn subfilter-btn-clear">
                 Clear All
               </button>
             </div>
