Sorting works - not most efficient I think
Sorting works - in current way of working - yet to add sort option choosing

--- a/index.html
+++ b/index.html
@@ -173,7 +173,17 @@
                   </div>
                 </div>
               </div>
-              <div class="testBtn">Test</div>
+              <div class="testBtn">
+                <button>test</button>
+                <div class="subfilter__row">
+                  <input class="sort-checkbox" type="checkbox" id="s1" />
+                  <label for="s1">Price low to high</label>
+                </div>
+                <div class="subfilter__row">
+                  <input class="sort-checkbox" type="checkbox" id="s2" />
+                  <label for="s2">Price high to low</label>
+                </div>
+              </div>
             </div>
             <div class="subfilter-active">
               <button class="hidden active-filter-btn subfilter-btn-clear">
