--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                   </div>
                 </div>
               </div>
-              <div class="hidden testBtn">
-                <button>test</button>
+              <div class="testBtn">
+                <button>Sort</button>
                 <div class="subfilter__row">
                   <input class="sort-checkbox" type="checkbox" id="s1" />
                   <label for="s1">Price low to high</label>
