--- a/index.html
+++ b/index.html
@@ -210,14 +210,9 @@
                   <img src="./images/icons/star-half.svg.svg" alt="" />
                   <img src="./images/icons/star-empty.svg.svg" alt="" />
                 </div>
-                <p class="product-description">
-                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
-                  Adipisicing elit.
-                </p>
-                <div class="labels">
-                  <button class="label type">Keyboard</button>
-                  <button class="label brand">Royal Kludge</button>
-                  <button class="label color">white</button>
+                <div class="subfilter__row">
+                  <label for="Royal Kludge">Royal Kludge</label>
+                  <input class="brand-checkbox" type="checkbox" id="1" />
                 </div>
                 <div class="price_cart">
                   <p class="price">$399</p>
@@ -248,82 +243,33 @@
                 </div>
               </section>
             </div>
+            <div class="subfilter-active">
+              <button class="hidden active-filter-btn subfilter-btn-clear">
+                Clear All
+              </button>
+            </div>
+          </div>
+          <div class="grid-container">
             <div
               class="product-card Keyboard"
               data-category="Keyboard"
+              data-color="c1,c4"
               data-brand="b2"
-              data-color="c4"
-              data-price="500"
+              data-price="399"
             >
-              <div class="card-bg"></div>
-              <div class="discount">%</div>
-
-              <section class="card-back">
-                <div class="ratings">
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-half.svg.svg" alt="" />
-                  <img src="./images/icons/star-empty.svg.svg" alt="" />
-                </div>
-                <p class="product-description">
-                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
-                  Adipisicing elit.
-                </p>
-                <div class="labels">
-                  <button class="label type">Keyboard</button>
-                  <button data-brand="b1" class="label brand">
-                    Royal Kludge
-                  </button>
-                  <button class="label color">Blue</button>
-                </div>
-                <div class="price_cart">
-                  <p class="price">$500</p>
-                  <figure class="cart">
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </section>
               <section class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 849"
-                />
-                <h3 class="product-name">Keyboard Nuphy Blue</h3>
-                <div class="product-price_icon">
-                  <p class="price">$500</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </section>
-            </div>
-
-            <div
-              class="product-card"
-              data-category="Keyboard"
-              data-brand="b1"
-              data-color="c5"
-              data-price="500"
-            >
-              <div class="card-bg"></div>
-              <div class="discount">%</div>
-
-              <section class="card-back">
-                <div class="ratings">
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-half.svg.svg" alt="" />
-                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
+                <div class="description">
+                  <span>Royal Kludge</span>
+                  <h3 class="name">Royal Kludge RK84</h3>
+                  <div class="ratings">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <h4 class="price">€399</h4>
                 </div>
                 <p class="product-description">
                   Lorem ipsum dolor sit amet consectetur lorem, ipsum.
@@ -363,24 +309,26 @@
                 </div>
               </section>
             </div>
-
             <div
-              class="product-card"
-              data-color="c11"
+              class="product-card Keyboard"
+              data-category="Keyboard"
               data-brand="b2"
-              data-category="Keycaps"
-              data-price="700"
+              data-color="c4"
+              data-price="500"
             >
-              <div class="card-bg"></div>
-              <div class="discount">%</div>
-
-              <section class="card-back">
-                <div class="ratings">
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-half.svg.svg" alt="" />
-                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+              <section class="card-front">
+                <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
+                <div class="description">
+                  <span>Royal Kludge</span>
+                  <h3 class="name">Royal Kludge RK84</h3>
+                  <div class="ratings">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <h4 class="price">€399</h4>
                 </div>
                 <p class="product-description">
                   Lorem ipsum dolor sit amet consectetur lorem, ipsum.
@@ -420,7 +368,6 @@
                 </div>
               </section>
             </div>
-
             <div
               class="product-card"
               data-color="c3,c4,c1"
@@ -428,16 +375,6 @@
               data-category="Switches"
               data-price="900"
             >
-              <div class="card-bg"></div>
-              <div class="discount">%</div>
-
-              <section class="card-back">
-                <div class="ratings">
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-half.svg.svg" alt="" />
-                  <img src="./images/icons/star-empty.svg.svg" alt="" />
                 </div>
                 <p class="product-description">
                   Lorem ipsum dolor sit amet consectetur lorem, ipsum.
@@ -649,6 +586,286 @@
               </section>
             </div>
 
+            <div
+              class="product-card"
+              data-color="c8,c7"
+              data-category="Switches"
+              data-brand="b1"
+              data-price="299"
+            >
+              <div class="card-bg"></div>
+              <div class="discount">%</div>
+
+              <section class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
+                  Adipisicing elit.
+                </p>
+                <div class="labels">
+                  <button class="label type">Keyboard</button>
+                  <button class="label brand">Royal Kludge</button>
+                  <button class="label color">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">$299</p>
+                  <figure class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Switchs Royal Kludge red,orange</h3>
+                <div class="product-price_icon">
+                  <p class="price">$299</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+            </div>
+            <div
+              class="product-card"
+              data-color="c8,c7"
+              data-category="Switches"
+              data-brand="b1"
+              data-price="299"
+            >
+              <div class="card-bg"></div>
+              <div class="discount">%</div>
+
+              <section class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
+                  Adipisicing elit.
+                </p>
+                <div class="labels">
+                  <button class="label type">Keyboard</button>
+                  <button class="label brand">Royal Kludge</button>
+                  <button class="label color">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">$299</p>
+                  <figure class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Switchs Royal Kludge red,orange</h3>
+                <div class="product-price_icon">
+                  <p class="price">$299</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+            </div>
+            <div
+              class="product-card"
+              data-color="c8,c7"
+              data-category="Switches"
+              data-brand="b1"
+              data-price="299"
+            >
+              <div class="card-bg"></div>
+              <div class="discount">%</div>
+
+              <section class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
+                  Adipisicing elit.
+                </p>
+                <div class="labels">
+                  <button class="label type">Keyboard</button>
+                  <button class="label brand">Royal Kludge</button>
+                  <button class="label color">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">$299</p>
+                  <figure class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Switchs Royal Kludge red,orange</h3>
+                <div class="product-price_icon">
+                  <p class="price">$299</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+            </div>
+            <div
+              class="product-card"
+              data-color="c8,c7"
+              data-category="Switches"
+              data-brand="b1"
+              data-price="299"
+            >
+              <div class="card-bg"></div>
+              <div class="discount">%</div>
+
+              <section class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
+                  Adipisicing elit.
+                </p>
+                <div class="labels">
+                  <button class="label type">Keyboard</button>
+                  <button class="label brand">Royal Kludge</button>
+                  <button class="label color">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">$299</p>
+                  <figure class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Switchs Royal Kludge red,orange</h3>
+                <div class="product-price_icon">
+                  <p class="price">$299</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+            </div>
+            <div
+              class="product-card"
+              data-color="c8,c7"
+              data-category="Switches"
+              data-brand="b1"
+              data-price="299"
+            >
+              <div class="card-bg"></div>
+              <div class="discount">%</div>
+
+              <section class="card-back">
+                <div class="ratings">
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-full.svg.svg" alt="" />
+                  <img src="./images/icons/star-half.svg.svg" alt="" />
+                  <img src="./images/icons/star-empty.svg.svg" alt="" />
+                </div>
+                <p class="product-description">
+                  Lorem ipsum dolor sit amet consectetur lorem, ipsum.
+                  Adipisicing elit.
+                </p>
+                <div class="labels">
+                  <button class="label type">Keyboard</button>
+                  <button class="label brand">Royal Kludge</button>
+                  <button class="label color">white</button>
+                </div>
+                <div class="price_cart">
+                  <p class="price">$299</p>
+                  <figure class="cart">
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+              <section class="card-front">
+                <img
+                  class="product-img"
+                  src="./images/welcome/kb-rk84.webp"
+                  alt="Royal Kludge 84"
+                />
+                <h3 class="product-name">Switchs Royal Kludge red,orange</h3>
+                <div class="product-price_icon">
+                  <p class="price">$299</p>
+                  <figure class="icons">
+                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
+                    <img
+                      src="./images/icons/shopping-cart.svg.svg"
+                      alt="shopping cart icon"
+                    />
+                  </figure>
+                </div>
+              </section>
+            </div>
             <div
               class="product-card"
               data-color="c8,c7"
