new product cards + first js modals

--- a/index.html
+++ b/index.html
@@ -192,64 +192,12 @@
           </div>
           <div class="grid-container">
             <div
-              class="product-card Keyboard"
+              class="product-card"
               data-category="Keyboard"
               data-color="c1,c4"
               data-brand="b2"
               data-price="399"
             >
-              <div class="card-bg"></div>
-              <div class="discount">%</div>
-
-              <section class="card-back">
-                <div class="ratings">
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-full.svg.svg" alt="" />
-                  <img src="./images/icons/star-half.svg.svg" alt="" />
-                  <img src="./images/icons/star-empty.svg.svg" alt="" />
-                </div>
-                <div class="subfilter__row">
-                  <label for="Royal Kludge">Royal Kludge</label>
-                  <input class="brand-checkbox" type="checkbox" id="1" />
-                </div>
-                <div class="price_cart">
-                  <p class="price">$399</p>
-                  <figure class="cart">
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </section>
-              <section class="card-front">
-                <img
-                  class="product-img"
-                  src="./images/welcome/kb-rk84.webp"
-                  alt="Royal Kludge 84"
-                />
-                <h3 class="product-name">Keyboard Nuphy Black,blue</h3>
-                <div class="product-price_icon">
-                  <p class="price">$399</p>
-                  <figure class="icons">
-                    <img src="./images/icons/heart.svg.svg" alt="heart icon" />
-                    <img
-                      src="./images/icons/shopping-cart.svg.svg"
-                      alt="shopping cart icon"
-                    />
-                  </figure>
-                </div>
-              </section>
-            </div>
-            <div class="subfilter-active">
-              <button class="hidden active-filter-btn subfilter-btn-clear">
-                Clear All
-              </button>
-            </div>
-          </div>
-          <div class="grid-container">
-            <div class="product-card">
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -329,7 +277,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -409,7 +363,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -489,7 +449,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -569,7 +535,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -649,7 +621,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -729,7 +707,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -809,7 +793,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -889,7 +879,13 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -969,7 +965,99 @@
                 </div>
               </section>
             </div>
-            <div class="product-card">
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
+              <section class="card-front">
+                <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
+                <div class="description">
+                  <span>Royal Kludge</span>
+                  <h3 class="name">Royal Kludge RK84</h3>
+                  <div class="ratings">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                  </div>
+                  <h4 class="price">€399</h4>
+                </div>
+                <!-- <div class="labels">
+                  <button class="label type">Keyboard</button>
+                  <button class="label brand">Royal Kludge</button>
+                  <button class="label color">white</button>
+                </div> -->
+              </section>
+              <section class="product-modal">
+                <div class="product-details">
+                  <span class="close">&times;</span>
+                  <div class="images">
+                    <img src="./images/welcome/kb-rk84.webp" alt="" />
+                    <figure>
+                      <img src="./images/sliderImages/keykapsBlue.jpg" alt="" />
+                      <img src="./images/sliderImages/nuphy1.jpg" alt="" />
+                      <img src="./images/sliderImages/switchBrown.jpg" alt="" />
+                      <img src="./images/sliderImages/nuphy3.jpg" alt="" />
+                    </figure>
+                  </div>
+                  <div class="text">
+                    <div class="product">
+                      <h3 class="name">Nuphy 1</h3>
+                      <span class="title brand">ROYAL KLUDGE</span>
+                    </div>
+                    <div class="price-container">
+                      <div class="price-wrapper wrap">
+                        <span class="title">PRICE</span>
+                        <h4 class="price">$59.00</h4>
+                      </div>
+                      <div class="amount-wrapper wrap">
+                        <span class="title">QUANTITY</span>
+                        <div class="counter">
+                          <span class="minus">-</span>
+                          <span class="amount">1</span>
+                          <span class="plus">+</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="description">
+                      <span class="title">DESCRIPTION</span>
+                      <p class="description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Placeat voluptate dicta doloribus dolor animi
+                        eveniet sint assumenda illo iste optio. Beatae, sapiente
+                        officia quae consequuntur nobis consequatur repellendus
+                        dolor amet?
+                      </p>
+                    </div>
+                    <div class="ratings">
+                      <span class="title">RATINGS</span>
+                      <figure>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </figure>
+                    </div>
+                    <div class="total-price">
+                      <span class="title">TOTAL PRICE</span>
+                      <h4>419.30</h4>
+                    </div>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div
+              class="product-card"
+              data-category="Keyboard"
+              data-color="c1,c4"
+              data-brand="b2"
+              data-price="399"
+            >
               <section class="card-front">
                 <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
                 <div class="description">
@@ -1055,33 +1143,3 @@
     </main>
   </body>
 </html>
-
-<script>
-  // Get the modal
-  const modal = document.querySelectorAll(".grid-container .product-modal")[0];
-
-  // Get the button that opens the modal
-  const productCard = document.querySelectorAll(
-    ".grid-container .product-card"
-  )[0];
-
-  // Get the <span> element that closes the modal
-  const closer = document.querySelectorAll(".product-modal .close")[0];
-
-  // When the user clicks the button, open the modal
-  productCard.onclick = () => {
-    modal.style.display = "block";
-  };
-
-  // When the user clicks on <span> (x), close the modal
-  closer.onclick = () => {
-    modal.style.display = "none";
-  };
-
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function (event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  };
-</script>
