--- a/index.html
+++ b/index.html
@@ -176,10 +176,9 @@
 
               <div class="sortDiv">
                 <label for="sort">Sort:</label>
-
                 <select name="sort" id="sort">
-                  <option value="PriceHL">Price, high to low</option>
-                  <option value="PriceLH">Price, low to high</option>
+                  <option value="priceHL">Price, high to low</option>
+                  <option value="priceLH">Price, low to high</option>
                   <option value="dateON">Date, old to new</option>
                   <option value="dateNO">Date, new to old</option>
                 </select>
