changed modal js functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
   <body>
     <main>
+      <div class="modal-overlay"></div>
       <div class="overlay"></div>
+
       <div class="nav-container-mobile">
         <ul class="mobile-nav-list">
           <li><a class="mobile-home-btn" href="#">Home</a></li>
@@ -218,7 +220,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal">
+              <section class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -305,7 +307,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal">
+              <section class="product-moda hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -392,7 +394,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal">
+              <section class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -479,7 +481,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal">
+              <section class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -566,7 +568,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal">
+              <section class="product-moda hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
@@ -653,7 +655,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <section class="product-modal">
+              <section class="product-modal hidden">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
