Setup of brands and colors includes

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           </div>
           <div class="subfilter-container">
             <div class="subfilter">
+              <!-- include php colors -->
               <div class="subfilter__section subfilter__colors-section">
                 <button
                   class="general-subfilter-btn subfilter-btn subfilter-btn-colors"
@@ -154,6 +155,8 @@
                   </div>
                 </div>
               </div>
+
+              <!-- include php brands -->
               <div class="subfilter__section subfilter__brands-section">
                 <button class="general-subfilter-btn subfilter-btn">
                   Brand
