Introducing swiper - img object fit not working

--- a/index.html
+++ b/index.html
@@ -204,7 +204,21 @@
               data-order="1"
             >
               <section class="card-front">
-                <img src="./images/welcome/kb-rk84.webp" alt="RK84" />
+                <div class="swiper">
+                  <!-- Additional required wrapper -->
+                  <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                      <img src="./images/sliderImages/keykapsBlue.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./images/sliderImages/nuphy1.jpg" alt="" />
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./images/sliderImages/switchBrown.jpg" alt="" />
+                    </div>
+                  </div>
+                </div>
                 <div class="description">
                   <div class="prod-name">
                     <span>Royal Kludge</span>
