--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <button class="label color">white</button>
                 </div> -->
               </section>
-              <dialog open class="product-modal">
+              <dialog class="product-modal">
                 <div class="product-details">
                   <span class="close">&times;</span>
                   <div class="images">
