filter count start

--- a/index.html
+++ b/index.html
@@ -112,13 +112,19 @@
                     <span class="subfilter__clear-color">Clear</span>
                   </div>
                   <div class="subfilter__row-container">
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c1" />
-                      <label for="c1">Black</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c1" />
+                        <label for="c1">Black</label>
+                      </div>
+                      <span class="filterCount">5</span>
                     </div>
-                    <div class="subfilter__row">
-                      <input class="color-checkbox" type="checkbox" id="c3" />
-                      <label for="c3">White</label>
+                    <div class="subfilter__row testClass">
+                      <div class="filterAndLabel">
+                        <input class="color-checkbox" type="checkbox" id="c3" />
+                        <label for="c3">White</label>
+                      </div>
+                      <span class="filterCount">5</span>
                     </div>
                     <div class="subfilter__row">
                       <input class="color-checkbox" type="checkbox" id="c4" />
